# ProDeck

./: .gitignore  .travis.yml  CMakeLists.txt  ProDeck.cpp  ProDeck.h  Prodeck.pro  Prodeck_en_GB.ts  macos_appnap.h  macos_appnap.mm  main.cpp  sonar-project.properties
Core/DeckController/: StreamDeckDevice.cpp  StreamDeckDevice.h  StreamDeckDiscovery.cpp  StreamDeckDiscovery.h
Core/Device/: KeyPosition.cpp  KeyPosition.h  KeyStatus.h  StreamDeckAvailableDevice.h  StreamDeckDeviceInformation.h  StreamDeckFactory.h  StreamDeckXLDevice.h  streamdeckfactory.cpp
Core/Hid/: HidDevice.cpp  HidDevice.h  HidDeviceInformation.h
OS/: Configuration.h  DeckView.cpp  DeckView.h  Key.cpp  Key.h  MainView.h  NavigationBar.cpp  NavigationBar.h  ProDeckOS.cpp  ProDeckOS.h  SDImage.cpp  SDImage.h  SplashScreen.cpp  SplashScreen.h  TextPosition.h  ViewSplitterVertically.cpp  ViewSplitterVertically.h  navigationview.cpp  navigationview.h  sdimageorientation.h
libs/hidapi/: hidapi.h
libs/hidapi/linux/: hid.c
libs/hidapi/mac/: hid.c
libs/hidapi/windows/: hid.c
src/OS/: Configuration.cpp  DeckView.h  MainView.cpp  MainView.h  NavigationBar.cpp  NavigationBar.h  ProDeckOS.cpp  ProDeckOS.h  SplashScreen.cpp  SplashScreen.h
src/core/DeckController/: StreamDeckDevice.cpp  StreamDeckDevice.h  StreamDeckDiscovery.cpp  StreamDeckDiscovery.h
src/core/Device/Elgato/: StreamDeckDeviceInformation.h  StreamDeckFactory.h  StreamDeckXLDevice.cpp  streamdeckfactory.cpp
src/core/Device/Razer/: RazerAvailableDevice.h  RazerBlackWidowV3Device.cpp  RazerBlackWidowV3Device.h  RazerDeviceInformation.h  RazerFactory.cpp  RazerFactory.h
src/core/Hid/: HidDevice.cpp  HidDevice.h  HidDiscovery.cpp  HidDiscovery.h
src/core/Logging/: Logging.cpp  Logging.h
src/core/RazerController/: RazerDevice.cpp  RazerDevice.h  RazerDiscovery.cpp  RazerDiscovery.h
